--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,13 @@
     tools:context=".MainActivity">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="182dp"
+        android:id="@+id/constraintLayout"
+        android:layout_width="185dp"
         android:layout_height="125dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
-        tools:layout_editor_absoluteX="5dp"
+        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
         tools:layout_editor_absoluteY="54dp">
 
         <TextView
@@ -63,6 +65,7 @@
         android:id="@+id/editSearch"
         android:layout_width="357dp"
         android:layout_height="44dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textAutoCorrect|textAutoComplete"
         android:text="minesweeper"
@@ -81,27 +84,29 @@
         android:text="Start Game!"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="300dp" />
+        tools:layout_editor_absoluteY="313dp" />
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="Game Settings"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="182dp"
+        android:id="@+id/constraintLayout2"
+        android:layout_width="185dp"
         android:layout_height="125dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
-        tools:layout_editor_absoluteX="194dp"
+        tools:layout_editor_absoluteX="197dp"
         tools:layout_editor_absoluteY="54dp">
 
         <TextView
@@ -144,7 +149,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="0dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
@@ -153,16 +158,28 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="140dp"
-        android:layout_height="98dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible" />
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left" />
+
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top" />
+
+    <android.support.constraint.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
 
 </android.support.constraint.ConstraintLayout>
