--- a/app/src/main/res/layout/activity_minesweeper.xml
+++ b/app/src/main/res/layout/activity_minesweeper.xml
@@ -25,8 +25,8 @@
 
     <edu.illinois.cs125.sagittario.sagittario.CanvasView
         android:id="@+id/canvasView"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
