--- a/app/src/main/res/layout/activity_minesweeper.xml
+++ b/app/src/main/res/layout/activity_minesweeper.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
+<!--
         <android.support.v7.widget.Toolbar
             android:id="@+id/tlb1"
             android:layout_width="497dp"
@@ -20,13 +20,13 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="Sagittario" />
-
+-->
     </android.support.design.widget.AppBarLayout>
 
     <edu.illinois.cs125.sagittario.sagittario.CanvasView
         android:id="@+id/canvasView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
