--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="125dp"
         android:layout_alignStart="@+id/editSearch"
         android:layout_alignTop="@+id/constraintLayout2"
-        android:background="@color/colorPrimary"
+        android:background="#3f51b5"
         android:backgroundTint="@color/colorPrimary">
 
         <TextView
@@ -52,31 +52,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="231dp"
+        android:layout_marginTop="200dp"
         android:text="Search Key for Background Image"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editSearch"
         android:layout_width="357dp"
         android:layout_height="44dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textViewSearchLabel"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="195dp"
         android:ems="10"
         android:inputType="textAutoCorrect|textAutoComplete"
-        android:text="brick"
-        android:textAlignment="center"
-        android:textColor="@android:color/darker_gray" />
+        android:text="Solid White"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/btnStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/editSearch"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="135dp"
         android:text="Start Game!"
         android:textAlignment="center" />
 
@@ -163,5 +161,27 @@
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/Rules"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="88dp"
+        android:text="Rules:\n  - tap a tile to uncover it\n  - press and hold to flag a tile\n  - reveal all safe tiles to win"
+        android:textAlignment="viewStart"
+        android:textAllCaps="false" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="232dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="34dp"
+        android:text="Enter desired parameters into the fields and press START GAME!"
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
 </RelativeLayout>
